rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__masked_members__conditional_mask_over_stored_member_is_rendered_over_rollup_pg_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/masked_members.rs
expression: result
---
workers__full_name | workers__gender
-------------------+----------------
Alice              | F              
Bob                | NULL           
Carol              | NULL
