rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__masked_members__masked_time_dimension_is_masked_over_rollup_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/masked_members.rs
expression: result
---
workers__created_at_day | workers__count
------------------------+---------------
NULL                    | 3
